gts-macros/tests/compile_fail/non_gts_generic.stderr
error[E0277]: the trait bound `MyStruct: GtsSchema` is not satisfied
  --> tests/compile_fail/non_gts_generic.rs:31:17
   |
31 |     let _event: BaseEventV1<MyStruct> = BaseEventV1 {
   |                 ^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `GtsSchema` is not implemented for `MyStruct`
  --> tests/compile_fail/non_gts_generic.rs:24:1
   |
24 | pub struct MyStruct {
   | ^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `GtsSchema`
  --> tests/compile_fail/non_gts_generic.rs:9:1
   |
 9 | / #[struct_to_gts_schema(
10 | |     dir_path = "schemas",
11 | |     base = true,
12 | |     schema_id = "gts.x.core.events.type.v1~",
13 | |     description = "Base event type",
14 | |     properties = "id,payload"
15 | | )]
   | |__^ `BaseEventV1<P>`
   |
  ::: $WORKSPACE/gts/src/schema.rs
   |
   |   impl GtsSchema for () {
   |   ^^^^^^^^^^^^^^^^^^^^^ `()`
note: required by a bound in `BaseEventV1`
  --> tests/compile_fail/non_gts_generic.rs:9:1
   |
 9 | / #[struct_to_gts_schema(
10 | |     dir_path = "schemas",
11 | |     base = true,
12 | |     schema_id = "gts.x.core.events.type.v1~",
13 | |     description = "Base event type",
14 | |     properties = "id,payload"
15 | | )]
   | |__^ required by this bound in `BaseEventV1`
16 |   #[derive(Debug)]
17 |   pub struct BaseEventV1<P> {
   |              ----------- required by a bound in this struct
   = note: this error originates in the attribute macro `struct_to_gts_schema` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyStruct: GtsSchema` is not satisfied
  --> tests/compile_fail/non_gts_generic.rs:33:18
   |
33 |           payload: MyStruct {
   |  __________________^
34 | |             some_id: "123".to_string(),
35 | |         },
   | |_________^ unsatisfied trait bound
   |
help: the trait `GtsSchema` is not implemented for `MyStruct`
  --> tests/compile_fail/non_gts_generic.rs:24:1
   |
24 | pub struct MyStruct {
   | ^^^^^^^^^^^^^^^^^^^
help: the following other types implement trait `GtsSchema`
  --> tests/compile_fail/non_gts_generic.rs:9:1
   |
 9 | / #[struct_to_gts_schema(
10 | |     dir_path = "schemas",
11 | |     base = true,
12 | |     schema_id = "gts.x.core.events.type.v1~",
13 | |     description = "Base event type",
14 | |     properties = "id,payload"
15 | | )]
   | |__^ `BaseEventV1<P>`
   |
  ::: $WORKSPACE/gts/src/schema.rs
   |
   |   impl GtsSchema for () {
   |   ^^^^^^^^^^^^^^^^^^^^^ `()`
note: required by a bound in `BaseEventV1`
  --> tests/compile_fail/non_gts_generic.rs:9:1
   |
 9 | / #[struct_to_gts_schema(
10 | |     dir_path = "schemas",
11 | |     base = true,
12 | |     schema_id = "gts.x.core.events.type.v1~",
13 | |     description = "Base event type",
14 | |     properties = "id,payload"
15 | | )]
   | |__^ required by this bound in `BaseEventV1`
16 |   #[derive(Debug)]
17 |   pub struct BaseEventV1<P> {
   |              ----------- required by a bound in this struct
   = note: this error originates in the attribute macro `struct_to_gts_schema` (in Nightly builds, run with -Z macro-backtrace for more info)
